tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__ASeriesofTubes-AAAAAAAAAAAAAAAAAAACRQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 581,
  "prerequisites": [
    588
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Before you can craft your first farm block you need apatite tubes. Make some apatite rods first with a lathe, then use a forge hammer to join them into long apatite rods. You need golden bolts and a red alloy plate.\n\nPut some glass or sand into your thermionic fabricator and make your first tubes.\n\n[note]You can also use the circuit assembler for a better output. Why did we have you make the TF again?[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Series of Tubes",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    588
  ],
  "rewards": [],
  "tasks": []
}
