tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__BEGONELAGAlsoBat-AAAAAAAAAAAAAAAAAAAK1A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2772,
  "prerequisites": [
    2122,
    2397
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Lag = Butterflies in this case, since they like to pile up just outside of chunk loading range. Also, they're annoying since they convert regular trees into more forestry ones, one leaf block at a time. Which causes more of the buggers to spawn. Fortunately, the settings we use prevent too many from being present at once, but still, they're annoying.\n\nThe solution to this is to kill them. Also, the bats. Stupid Thaumcraft warp. Use the (potentially unfinished) Pest Killer to do so.\n\nNotes: Hydrogen Cyanide has a recipe now. Both it and Formaldehyde require a Chemical Plant. The range is apparently 5x5 chunks, not blocks. It also only runs once every 30s or so?\n\n[note]PS: If you experience problems using it (more than already mentioned), raise a ticket on GitHub.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "BEGONE, LAG! Also, Bats",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2122,
    2397
  ],
  "rewards": [],
  "tasks": []
}
