tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__BetterFermenterO-AAAAAAAAAAAAAAAAAAAIBw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2055,
  "prerequisites": [
    2051
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With a Squeezer you can boost the output from your fermenter, saving on Fertilizer or Mulch and getting more per sapling. There's a variety of crops you can use to make fruit juice, so have fun breeding.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Better Fermenter Outputs",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2051
  ],
  "rewards": [],
  "tasks": []
}
