tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__BrazilNut-AAAAAAAAAAAAAAAAAAAI0A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2256,
  "prerequisites": [
    2127
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Brazil Nuts don't give you much in the way of important attributes. Breed them from Common Beech and Jungle.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Brazil Nut",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2127
  ],
  "rewards": [],
  "tasks": []
}
